AC_PREREQ(2.57)
AC_INIT(shellinabox, 2.3, markus@shellinabox.com)
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
AC_C_CONST
AC_PROG_GCC_TRADITIONAL
AC_CHECK_HEADERS([openssl/bio.h openssl/err.h openssl/ssl.h pthread.h         \
                  security/pam_appl.h security/pam_misc.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
